fix(footer): remove footer overflow

--- a/app/common/static/css/common/cfa_styles.css
+++ b/app/common/static/css/common/cfa_styles.css
@@ -114,7 +114,6 @@ nav #contacts {
   background-color: (--bg-secondary);
   border-radius: 30px;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  color: #ffffff;
 }
 
 .btn-primary {
@@ -802,7 +801,7 @@ nav #contacts {
   }
 }
 
-/* 
+/*
 body{
   margin: 0; background: #111;
 } */
